--- a/src/features/CarGenerationsList/ui/CarGenerationsList.module.scss
+++ b/src/features/CarGenerationsList/ui/CarGenerationsList.module.scss
@@ -10,16 +10,18 @@
 .gen_card {
   cursor: pointer;
   position: relative;
-  background: var(--clr-primary-light);
+  background: var(--clr-grey-light);
   overflow: hidden;
   border-radius: var(--brd-radius-2);
   width: 150px;
   height: 120px;
+  @extend %loading;
 
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+
   }
 
   .car_body_type {
