--- a/src/features/SelectGeoLocation/ui/SelectGeoLocation.module.scss
+++ b/src/features/SelectGeoLocation/ui/SelectGeoLocation.module.scss
@@ -32,8 +32,13 @@
     transform: translateY(-50%);
   }
 
+  input {
+    color: var(--clr-fnt-primary)
+  }
+
   .search_icon {
     left: 4px;
+    color: var(--clr-fnt-primary) !important;
   }
 
   .clear_query {
@@ -100,7 +105,7 @@
       }
 
       &:focus {
-        background: var(--clr-primary-light);
+        background: var(--clr-grey-light);
         outline: none;
       }
 
