--- a/src/shared/ui/Buttons/ArrowButton/ArrowButton.module.scss
+++ b/src/shared/ui/Buttons/ArrowButton/ArrowButton.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../car-buy/src/app/index';
+@import 'src/app/index';
 
 .arrow_button_wrapper {
   border-radius: var(--brd-radius-1);
