--- a/src/shared/ui/Buttons/ThreeDotesButton/ThreeDotsButton.module.scss
+++ b/src/shared/ui/Buttons/ThreeDotesButton/ThreeDotsButton.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../car-buy/src/app/index';
+@import 'src/app/index';
 
 .dotes_button {
   font-weight: var(--fnt-weight-semi-bold);
